[tool.poetry]
name = "course-project-oop"
version = "0.1.0"
description = ""
authors = ["Dmitriy Leonov <dmitriy.leonov.1993@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
